--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@symfony/webpack-encore": "^0.12.0",
         "babel-preset-react": "^6.24.1",
+        "firebase": "^4.5.0",
         "node-sass": "^4.5.3",
         "prop-types": "^15.6.0",
         "react": "^16.0.0",
@@ -17,6 +18,9 @@
         "build": "encore production"
     },
     "dependencies": {
-        "jquery": "^3.2.1"
+        "bootstrap-sass": "^3.3.7",
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.2.1",
+        "react-fontawesome": "^1.6.1"
     }
 }
