--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "devDependencies": {
         "@symfony/webpack-encore": "^0.12.0",
         "babel-preset-react": "^6.24.1",
-        "firebase": "^4.5.0",
+        "firebase": "^4.6.0",
         "node-sass": "^4.5.3",
         "prop-types": "^15.6.0",
         "react": "^16.0.0",
@@ -21,6 +21,7 @@
         "bootstrap-sass": "^3.3.7",
         "font-awesome": "^4.7.0",
         "jquery": "^3.2.1",
+        "react-bootstrap": "^0.31.5",
         "react-fontawesome": "^1.6.1"
     }
 }
